fix (WordPress 5.6): corrected icon spacing in the 3 tabs

--- a/src/components/panel-tabs/editor.scss
+++ b/src/components/panel-tabs/editor.scss
@@ -26,7 +26,7 @@
 		cursor: pointer;
 		color: #1e1e1e;
 		border: 0 !important;
-		svg {
+		.dashicon {
 			margin: 5px;
 			height: 20px;
 		}
